@@ -43,6 +43,9 @@ EXTRA_DIST += $(atf_sh_DATA)
 
 dist_man_MANS += atf-sh/atf-sh-api.3
 
+atf_shaclocaldir = $(atf_aclocaldir)
+atf_shaclocal_DATA = atf-sh/atf-sh.m4
+
 atf_shpkgconfigdir = $(atf_pkgconfigdir)
 atf_shpkgconfig_DATA = atf-sh/atf-sh.pc
 CLEANFILES += atf-sh/atf-sh.pc
